# alred

./: .gitignore  BUILD.md  CONFIG.md  Dockerfile.glibc228  README.md  alred.py  alred.spec  pyproject.toml  requirements.txt
alred/: __init__.py  cli.py  collect.py  constants.py  design.py  inventory.py  logging_check.py  parsing.py  render.py  resources.py  templates.py  topology.py  transform.py  utils.py
alred/j2/: transform_parent_trunk_section.j2  transform_svi_section.j2  transform_vlan_section.j2  vni_add_config.j2  vni_delete_config.j2
alred/sample_configs/: .env.example  clab_cables.example.csv  clab_credentials.example.yaml  clab_kind_cluster.example.csv  clab_lab_profile.example.yaml  clab_linux_server.example.csv  clab_merge.example.yaml  clab_node_map.example.csv  description_rules.example.yaml  hosts.example.txt  init_clab_hosts.example.txt  mappings.example.yaml  policy.example.yaml  roles.example.yaml  show_commands.example.txt  sites.example.yaml  underlay_render.example.yaml
chatgpt_gpts_sample/: README.md  instructions.txt  network-output-examples.md  network-output-rules.md
packaging/linux/: Dockerfile.glibc217  Dockerfile.glibc234
scripts/: build_binary_glibc.sh  build_binary_glibc217.sh  build_binary_glibc228.sh  build_binary_glibc234.sh  build_release_artifacts_linux_x86_64.sh  prepare_release_artifacts.sh
tests/: test_design.py  test_transform.py
